tests/errors/leftover_due_to_bad_mapping.stderr
error[E0308]: mismatched types
 --> tests/errors/leftover_due_to_bad_mapping.rs:4:32
  |
4 |     set! { x : x <- [1, 2, 3], [4, 5, 6], *x != 2 };
  |                                ^^^^^^^^^ expected `bool`, found `[{integer}; 3]`
